Cherry-pick 313873@main (6a02a758cba4). https://bugs.webkit.org/show_bug.cgi?id=315557

[EME] Increase key wait timeout to 10 seconds
    https://bugs.webkit.org/show_bug.cgi?id=315557

    Reviewed by Xabier Rodriguez-Calvar.

    Seven seconds were not sufficient on some embedded device providing a Widevine L3 CDM, so increase
    the timeout to 10 seconds.

    * Source/WebCore/platform/encryptedmedia/CDMProxy.h:

    Canonical link: https://commits.webkit.org/313873@main

Canonical link: https://commits.webkit.org/305877.711@webkitglib/2.52